# eng_project

./: manage.py  pylint.rc  pyproject.toml  setup.cfg
data/: feedback.csv  terms.csv
eng_project/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: exercises_db.py  feedback_save.py  models.py  user_id.py  views.py
myapp/static/: mystyle.css
myapp/templates/: base_page.html  exercise.html  exercises_list.html  feedback.html  feedback_request.html  index.html  stats.html  submit_exercise.html
